<resources>
    <string name="app_name">HabiTrack</string>
    <string name="txtPantallaInicioBienvenido">Bienvenido</string>
    <string name="txtPantallaInicioHabiTrack">HabiTrack</string>
    <string name="txtPantallaInicioFluf">A tu futuro</string>
    <string name="btnPantallaInicioIniciar">Iniciar</string>
    <string name="titulo_login">Iniciar Sesión</string>
    <string name="titulo_registro">Crear Cuenta</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_registro">Contraseña (mínimo 6 carateres)</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="tv_ir_a_registro">No tienes cuenta? Regístrate aquí</string>
    <string name="tv_volver_login">Ya tienes cuenta? Inicia sesión</string>
    <string name="switchModoOscuro">Modo Oscuro</string>
    <string name="tvRachaInicial">Racha: 0 días</string>
    <string name="tituloHabitosHoy">Hábitos de hoy</string>
    <string name="btnGestionarHabitos">Gestionar Hábitos</string>
    <string name="btnVerCalendario">Ver Calendario</string>
    <string name="btnAceptar">Finalizar Día</string>
    <string name="btnAgregar">Agregar hábito</string>
    <string name="btnReiniciar">Reiniciar Hábitos</string>
    <string name="tituloGestionHabitos">Gestión de Hábitos</string>
    <string name="tituloCatalogoHabitos">Catálogo de Hábitos</string>
    <string name="btnNuevoHabito">Nuevo Hábito</string>
    <string name="checkBoxTomarAgua">Tomar Agua</string>
    <string name="checkBoxLeer">Leer</string>
    <string name="checkBoxCaminar">Caminar</string>
    <string name="titulo_calendario">Calendario de Seguimiento</string>
    <string name="txt_selecciona_fecha">Selecciona una fecha</string>
    <string name="dialog_reiniciar_titulo">Reiniciar Hábitos</string>
    <string name="dialog_reiniciar_mensaje">¿Reiniciar hábitos?</string>
    <string name="dialog_exito_titulo">En horabuena</string>
    <string name="dialog_exito_mensaje">Has completado todos tus hábitos del día, continúa para mantener tu racha</string>
    <string name="dialog_exito_boton">Logrado</string>
    <string name="dialog_nuevo_habito_titulo">Nuevo Hábito</string>
    <string name="hint_nombre_habito">Nombre del nuevo hábito</string>
    <string name="hint_dias_habito">Días para completar el reto</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="toast_campos_vacios">Algunos campos están vacíos</string>
    <string name="toast_error_guardar">Error al guardar el hábito</string>
    <string name="toast_progreso_eliminado">Progreso eliminado</string>
    <string name="toast_habito_incompleto">No has completado todos tus hábitos del día</string>
</resources>